--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,11 @@
 			<version>2.5</version>
 		</dependency>
 
+		<dependency>
+			<groupId>de.fuberlin.wiwiss.silk</groupId>
+			<artifactId>silk</artifactId>
+			<version>2.5</version>
+		</dependency>
 
 	</dependencies>
 </project>
