--- a/src/main/resources/mapping.properties
+++ b/src/main/resources/mapping.properties
@@ -1,10 +1,11 @@
 #mapping file! If 'TEMPORAIRE:XXX' appears somewhere, that means that open data wrapper have generated it because it hasn't found the right mapping. please check it out!
-#Sun Oct 13 07:25:51 PDT 2013
+#Thu Oct 31 19:16:23 CET 2013
 DESCRIPTION_DESCRIPTIF_OUVERTURES=sc\:openingHours,string,Hotel,chateau_monument,golf,plage,restaurant,parc_animalier_theme,dataDavy,dataSpas,dataHebergement
 TARIFS=sc\:price,string,lieux_d_art
 SERVICE_VELO=pdll\:hasBikeFeature,string,parking
 _l=ex\:coordinate,decimal,service_public,sport_loisir,mobilite,patrimoine,cinema,Hotel,bibliotheque_mediatheque,parking,action_sociale,vie_sociale,chateau_monument,enseignement,golf,jardin_familiaux,culte,musique3,salle_spectacle,musique2,musique1,equipement_culture,decheteries,vie_pratique,plage,restaurant,justice_securite,college_prive,parc_animalier_theme,mydata,dataAdeline3,dataDavy,dataVieSociale,dataSpas,dataActionSociale,dataCollegesLA,dataEnseignementNantes,dataHebergement
-COMMUNE_CODE_INSEE=dbpprop\:insee,integer,patrimoine,Communes_geolocalises,manifestations_sportives,RDV_litteraires,Petites_cit\u00E9s_de_caractere,Librairies,lieux_d_art,Petites_cites_de_caractere
+MINISTERE_CODE=pdll\:ministryCode,string,dataSubventions
+COMMUNE_CODE_INSEE=dbpprop\:insee,integer,patrimoine,Communes_geolocalises,manifestations_sportives,RDV_litteraires,Petites_cit\u00E9s_de_caractere,Librairies,lieux_d_art,Petites_cites_de_caractere,dataSubventions
 DISCIPLINE=dbpedia-owl\:sport,string,manifestations_sportives
 GEO=pdll\:zoneGeo,string,Hotel,chateau_monument,golf,plage,restaurant,parc_animalier_theme,dataDavy,dataSpas,dataHebergement
 CAPACITE_PERS=dbpprop\:seatingCapacity,integer,Hotel,dataDavy,dataHebergement
@@ -12,6 +13,7 @@ SITE_WEB=dbpprop\:website,string,parking,RDV_litteraires,Librairies,lieux_d_art
 DEPARTEMENT=dbpedia-owl\:department, string,manifestations_sportives,RDV_litteraires
 DENO=rdfs\:label,string,patrimoine
 COMMUNE=dbpprop\:town, string,service_public,sport_loisir,mobilite,cinema,parking,manifestations_sportives,action_sociale,vie_sociale,enseignement,culte,equipement_culture,decheteries,vie_pratique,justice_securite,dataAdeline3,dataVieSociale,dataActionSociale,dataEnseignementNantes
+ANNEE=dcterms\:date,string,dataSubventions
 OHLALAQA=pdll\:islabeledOhlala,string,chateau_monument,golf,plage,parc_animalier_theme,dataSpas
 SPA=pdll\:hasSpa,string,Hotel,dataDavy,dataHebergement
 AIRE=dbpedia-owl\:aire,string,patrimoine
@@ -22,8 +24,12 @@ DESCRIPTION=dbpedia-owl\:abstract,string,RDV_litteraires,lieux_d_art
 SITE_INTERNET=dbpprop\:website,string,cinema
 DATE_DEBUT=sc\:startDate,string,manifestations_sportives
 SERVICES=pdll\:features,string,parking
+ADRESSE_4=dbpprop\:location,string,dataSubventions
 COPYRIGHT=dbpedia\:Copyright,string,patrimoine
 EXPLOITANT=dbpprop\:owner,string,parking
+ADRESSE_3=dbpprop\:location,string,dataSubventions
+ADRESSE_2=dbpprop\:location,string,dataSubventions
+ADRESSE_1=dbpprop\:location,string,dataSubventions
 GUIDE_2_CLAS=pdll\:guideMichelinScore,string,restaurant
 TYPO=pdll\:typePatrimoine,string,patrimoine
 TYPE=TEMPORAIRE\:TypeProblem,string,service_public,sport_loisir,mobilite,manifestations_sportives,action_sociale,vie_sociale,enseignement,culte,equipement_culture,vie_pratique,justice_securite,dataAdeline3,dataVieSociale,dataActionSociale,dataEnseignementNantes
@@ -34,7 +40,7 @@ ACCES=pdll\:transportAccess,string,lieux_d_art
 COMMENTAIRE=rdfs\:comment,string,Petites_cit\u00E9s_de_caractere,Petites_cites_de_caractere
 COM=dbpprop\:location,string,patrimoine
 CHEQUE_VAVANCES=pdll\:acceptedPaymentMethodVoucher,string,Hotel,dataDavy,dataHebergement
-COMMUNE_LIBELLE=foaf\:name, string,Communes_geolocalises,Petites_cit\u00E9s_de_caractere,Petites_cites_de_caractere
+COMMUNE_LIBELLE=foaf\:name, string,Communes_geolocalises,Petites_cit\u00E9s_de_caractere,Petites_cites_de_caractere,dataSubventions
 CAPACITE_VOITURE=pdll\:carCapacity,string,parking
 DATES=sc\:openingHours,string,RDV_litteraires
 VISIT_GRO_GUI=pdll\:visitGroupGuide,string,chateau_monument,golf,plage,parc_animalier_theme,dataSpas
@@ -47,8 +53,9 @@ RESTAU=pdll\:hasRestaurant,string,Hotel,dataDavy,dataHebergement
 V-D=pdll\:VignoleEtDecouverteLabelled,string,Hotel,chateau_monument,golf,plage,restaurant,parc_animalier_theme,dataDavy,dataSpas,dataHebergement
 PARK=pdll\:hasParking,string,Hotel,dataDavy,dataHebergement
 PISCINE=pdll\:hasSwimmingPool,string,Hotel,dataDavy,dataHebergement
+DENOMINATION_LONGUE=pdll\:highschoolNameExtanded,string,dataSubventions
 CATE=pdll\:classOfWork,string,patrimoine
-BP=sc\:postOfficeBoxNumber,string,college_prive,mydata,dataCollegesLA
+BP=sc\:postOfficeBoxNumber,string,college_prive,mydata,dataCollegesLA,dataSubventions
 TEL=sc\:telephone,string,RDV_litteraires,Librairies,lieux_d_art
 geo/name=foaf\:name,string,service_public,sport_loisir,mobilite,patrimoine,cinema,Hotel,bibliotheque_mediatheque,parking,action_sociale,vie_sociale,chateau_monument,enseignement,golf,jardin_familiaux,culte,musique3,salle_spectacle,musique2,musique1,equipement_culture,decheteries,vie_pratique,plage,restaurant,justice_securite,college_prive,parc_animalier_theme,mydata,dataAdeline3,dataDavy,dataVieSociale,dataSpas,dataActionSociale,dataCollegesLA,dataEnseignementNantes,dataHebergement
 Courriel=sc\:email,string,bibliotheque_mediatheque,salle_spectacle
@@ -63,18 +70,22 @@ HIST=dbpedia-owl\:abstract,string,patrimoine
 NBRE_PARCELLES=pdll\:numberOfGarden,string,jardin_familiaux
 CATEGORIE=pdll\:Category,string,sport_loisir,mobilite,action_sociale,vie_sociale,enseignement,culte,equipement_culture,vie_pratique,justice_securite,dataAdeline3,dataVieSociale,dataActionSociale,dataEnseignementNantes
 DESCRIPTION_DESCRIPTIF_TARIF=sc\:price,string,Hotel,chateau_monument,golf,plage,parc_animalier_theme,dataDavy,dataSpas,dataHebergement
+PUBLIC_PRIVE=pdll\:privacy,string,dataSubventions
 Ville=dbpprop\:town,string,bibliotheque_mediatheque,musique3,salle_spectacle,musique2,musique1
 GUIDE_2=pdll\:isInMichelinGuide,string,restaurant
 GUIDE_1=pdll\:isInGaultMillauGuide,string,restaurant
 Capacit\u00E9=dbpprop\:capacity,string,salle_spectacle
 ASSOCIATION=sc\:organization,string,jardin_familiaux
-VILLE=dbpprop\:town,string,RDV_litteraires,college_prive,Librairies,lieux_d_art,mydata,dataCollegesLA
+DENOMINATION=pdll\:highschoolName,string,dataSubventions
+VILLE=dbpprop\:town,string,RDV_litteraires,college_prive,Librairies,lieux_d_art,mydata,dataCollegesLA,dataSubventions
 SCLE=pdll\:datation,string,patrimoine
 TELEPHONE=sc\:telephone,string,service_public,sport_loisir,mobilite,parking,action_sociale,vie_sociale,enseignement,culte,equipement_culture,decheteries,vie_pratique,justice_securite,college_prive,mydata,dataAdeline3,dataVieSociale,dataActionSociale,dataCollegesLA,dataEnseignementNantes
 MURS=pdll\:murs,string,patrimoine
 SURFACE_TOTALE=dbpprop\:dimensions,string,jardin_familiaux
 LOIRE_VELO=pdll\:isLabelledLoireVelo,string,Hotel,dataDavy,dataHebergement
 CHERCHEUR=pdll\:chercheur,string,patrimoine
+CATEGORIE_RECTORAT_CODE_LIBELLE=pdll\:rectoratCategoryCodeExplicit,string,dataSubventions
+MINISTERE_LIBELLE=pdll\:ministryName,string,dataSubventions
 T-H_4=pdll\:isVisualImpairmentLabelled,string,Hotel,chateau_monument,golf,plage,restaurant,parc_animalier_theme,dataDavy,dataSpas,dataHebergement
 AUTRES_SERVICE_MOB_PROX=pdll\:featuresDescription,string,parking
 T-H_3=pdll\:isHearingImpairmentLabelled,string,Hotel,chateau_monument,golf,plage,restaurant,parc_animalier_theme,dataDavy,dataSpas,dataHebergement
@@ -97,11 +108,13 @@ LATITUDE=geo\:lat,decimal,Communes_geolocalises,Petites_cit\u00E9s_de_caractere,
 MEL_1=sc\:email,string,Hotel,chateau_monument,golf,plage,restaurant,parc_animalier_theme,dataDavy,dataSpas,dataHebergement
 TARIF1_2=sc\:price,string,Hotel,chateau_monument,golf,plage,parc_animalier_theme,dataDavy,dataSpas,dataHebergement
 TARIF1_1=sc\:price,string,Hotel,chateau_monument,golf,plage,restaurant,parc_animalier_theme,dataDavy,dataSpas,dataHebergement
+CATEGORIE_RECTORAT_CODE=pdll\:rectoratCategoryCode,string,dataSubventions
 PRESENTATION=dbpedia-owl\:abstract,string,parking,decheteries
 STAT=pdll\:statut,string,patrimoine
 TEL_2=sc\:telephone,string,Hotel,chateau_monument,golf,plage,restaurant,parc_animalier_theme,dataDavy,dataSpas,dataHebergement
 TEL_1=sc\:telephone,string,Hotel,chateau_monument,golf,plage,restaurant,parc_animalier_theme,dataDavy,dataSpas,dataHebergement
 SEGPA=pdll\:isSEGPA,string,college_prive,mydata,dataCollegesLA
+RNE=pdll\:highschoolRNECode,string,dataSubventions
 ADRESSE2=dbpprop\:location,string,lieux_d_art
 NOMFIC=pdll\:id,string,patrimoine
 ADRESSE1=dbpprop\:location,string,lieux_d_art
@@ -129,13 +142,14 @@ CODCOMMUNE=dbpprop\:insee,integer,parking
 STATUT=pdll\:statut,string,service_public,sport_loisir,mobilite,action_sociale,vie_sociale,enseignement,culte,equipement_culture,vie_pratique,justice_securite,dataAdeline3,dataVieSociale,dataActionSociale,dataEnseignementNantes
 LIBCATEGORIE=pdll\:CategoryLabel,string,service_public,sport_loisir,mobilite,parking,action_sociale,vie_sociale,enseignement,culte,equipement_culture,decheteries,vie_pratique,justice_securite,dataAdeline3,dataVieSociale,dataActionSociale,dataEnseignementNantes
 Adresse=dbpprop\:location,string,bibliotheque_mediatheque,musique3,salle_spectacle,musique2,musique1
-ID=pdll\:id,string,Hotel,bibliotheque_mediatheque,chateau_monument,golf,musique3,salle_spectacle,musique2,musique1,plage,restaurant,college_prive,parc_animalier_theme,mydata,dataDavy,dataSpas,dataCollegesLA,dataHebergement
-LABELLISABLE=pdll\:isLabellable,string,Petites_cit\u00E9s_de_caractere,Petites_cites_de_caractere
+MONTANT_VOTE=gr\:hasValueInteger,integer,dataSubventions
 PRESTA_5=pdll\:hasOnlineSelling,string,chateau_monument,golf,plage,parc_animalier_theme,dataSpas
-TYPE_2=dbpedia-owl\:abstract,string,Hotel,chateau_monument,golf,plage,parc_animalier_theme,dataDavy,dataSpas,dataHebergement
+LABELLISABLE=pdll\:isLabellable,string,Petites_cit\u00E9s_de_caractere,Petites_cites_de_caractere
+ID=pdll\:id,string,Hotel,bibliotheque_mediatheque,chateau_monument,golf,musique3,salle_spectacle,musique2,musique1,plage,restaurant,college_prive,parc_animalier_theme,mydata,dataDavy,dataSpas,dataCollegesLA,dataHebergement
 PRESTA_4=pdll\:hasBioproduct,string,chateau_monument,golf,plage,parc_animalier_theme,dataSpas
-TYPE_1=dbpedia-owl\:abstract,string,Hotel,chateau_monument,golf,plage,parc_animalier_theme,dataDavy,dataSpas,dataHebergement
+TYPE_2=dbpedia-owl\:abstract,string,Hotel,chateau_monument,golf,plage,parc_animalier_theme,dataDavy,dataSpas,dataHebergement
 PRESTA_3=pdll\:hasTasting,string,chateau_monument,golf,plage,parc_animalier_theme,dataSpas
+TYPE_1=dbpedia-owl\:abstract,string,Hotel,chateau_monument,golf,plage,parc_animalier_theme,dataDavy,dataSpas,dataHebergement
 PRESTA_2=pdll\:hasFamilyWelcome,string,chateau_monument,golf,plage,parc_animalier_theme,dataSpas
 PRESTA_1=pdll\:hasRVArea,string,chateau_monument,golf,plage,parc_animalier_theme,dataSpas
 CODE_POSTAL=sc\:postalCode,string,service_public,sport_loisir,mobilite,parking,action_sociale,vie_sociale,enseignement,culte,equipement_culture,decheteries,vie_pratique,justice_securite,dataAdeline3,dataVieSociale,dataActionSociale,dataEnseignementNantes
