Load linked datasets and querying over linked datasets

--- a/src/main/resources/mapping.properties
+++ b/src/main/resources/mapping.properties
@@ -1,5 +1,5 @@
 #mapping file! If 'TEMPORAIRE:XXX' appears somewhere, that means that open data wrapper have generated it because it hasn't found the right mapping. please check it out!
-#Sun Nov 03 17:01:33 CET 2013
+#Sun Nov 03 18:29:48 CET 2013
 DESCRIPTION_DESCRIPTIF_OUVERTURES=sc\:openingHours,string,Hotel,chateau_monument,golf,plage,restaurant,parc_animalier_theme,dataDavy,dataSpas,dataHebergement
 TARIFS=sc\:price,string,lieux_d_art
 SERVICE_VELO=pdll\:hasBikeFeature,string,parking
@@ -121,14 +121,16 @@ ADRESSE2=dbpprop\:location,string,lieux_d_art
 NOMFIC=pdll\:id,string,patrimoine
 ADRESSE1=dbpprop\:location,string,lieux_d_art
 SOUTIEN=pdll\:soutien,string,lieux_d_art
-ADRESSE=dbpprop\:location,string,service_public,sport_loisir,mobilite,cinema,parking,action_sociale,vie_sociale,enseignement,jardin_familiaux,culte,equipement_culture,decheteries,vie_pratique,justice_securite,college_prive,Librairies,mydata,dataAdeline3,dataVieSociale,dataActionSociale,dataCollegesLA,dataEnseignementNantes
+ADRESSE=dbpprop\:location,string,service_public,sport_loisir,mobilite,cinema,parking,action_sociale,vie_sociale,enseignement,jardin_familiaux,culte,equipement_culture,decheteries,vie_pratique,justice_securite,college_prive,Librairies,mydata,dataAdeline3,dataVieSociale,dataActionSociale,dataCollegesLA,dataEnseignementNantes,dataEnvoleo
 ORGANISATEUR=sc\:performer,string,RDV_litteraires
 AUTR=prop-fr\:author,string,patrimoine
 Nature=dbpedia-owl\:abstract,string,musique3,musique2,musique1
 VISIT_GRO_LIB=pdll\:visitGroupWithoutGuide,string,chateau_monument,golf,plage,parc_animalier_theme,dataSpas
+RUBRIQUES=TEMPORAIRE\:RUBRIQUES,string,dataEnvoleo
 VISIT_IND_LIB=pdll\:visitAloneWithoutGuide,string,chateau_monument,golf,plage,parc_animalier_theme,dataSpas
 NB_ELEVES=TEMPORAIRE\:NB_ELEVES,string,dataActionsEducativesLycees
 DESCRIPTION_DESCRIPTIF_CAPACITE=dbpprop\:seatingCapacity,string,Hotel,chateau_monument,golf,plage,restaurant,parc_animalier_theme,dataDavy,dataSpas,dataHebergement
+LOCALISATION=TEMPORAIRE\:LOCALISATION,string,dataEnvoleo
 CAPACITE_PMR=pdll\:carCapacityForDisable,string,parking
 ADR_2=dbpprop\:location,string,Hotel,chateau_monument,golf,plage,restaurant,parc_animalier_theme,dataDavy,dataSpas,dataHebergement
 ADR_1=dbpprop\:location,string,Hotel,chateau_monument,golf,plage,restaurant,parc_animalier_theme,dataDavy,dataSpas,dataHebergement
@@ -143,34 +145,34 @@ LABEL_1=pdll\:isCuisineriesGourmandesLabelled,string,Hotel,chateau_monument,golf
 FAX=sc\:faxNumber,string,college_prive,mydata,dataCollegesLA
 CODCOMMUNE=dbpprop\:insee,integer,parking
 STATUT=pdll\:statut,string,service_public,sport_loisir,mobilite,action_sociale,vie_sociale,enseignement,culte,equipement_culture,vie_pratique,justice_securite,dataAdeline3,dataVieSociale,dataActionSociale,dataEnseignementNantes
-LIBCATEGORIE=pdll\:CategoryLabel,string,service_public,sport_loisir,mobilite,parking,action_sociale,vie_sociale,enseignement,culte,equipement_culture,decheteries,vie_pratique,justice_securite,dataAdeline3,dataVieSociale,dataActionSociale,dataEnseignementNantes
 Adresse=dbpprop\:location,string,bibliotheque_mediatheque,musique3,salle_spectacle,musique2,musique1
+LIBCATEGORIE=pdll\:CategoryLabel,string,service_public,sport_loisir,mobilite,parking,action_sociale,vie_sociale,enseignement,culte,equipement_culture,decheteries,vie_pratique,justice_securite,dataAdeline3,dataVieSociale,dataActionSociale,dataEnseignementNantes
 MONTANT_VOTE=gr\:hasValueInteger,integer,dataSubventions
-ID=pdll\:id,string,Hotel,bibliotheque_mediatheque,chateau_monument,golf,musique3,salle_spectacle,musique2,musique1,plage,restaurant,college_prive,parc_animalier_theme,mydata,dataDavy,dataSpas,dataCollegesLA,dataHebergement
-LABELLISABLE=pdll\:isLabellable,string,Petites_cit\u00E9s_de_caractere,Petites_cites_de_caractere
 PRESTA_5=pdll\:hasOnlineSelling,string,chateau_monument,golf,plage,parc_animalier_theme,dataSpas
-TYPE_2=dbpedia-owl\:abstract,string,Hotel,chateau_monument,golf,plage,parc_animalier_theme,dataDavy,dataSpas,dataHebergement
+LABELLISABLE=pdll\:isLabellable,string,Petites_cit\u00E9s_de_caractere,Petites_cites_de_caractere
+ID=pdll\:id,string,Hotel,bibliotheque_mediatheque,chateau_monument,golf,musique3,salle_spectacle,musique2,musique1,plage,restaurant,college_prive,parc_animalier_theme,mydata,dataDavy,dataSpas,dataCollegesLA,dataHebergement
 PRESTA_4=pdll\:hasBioproduct,string,chateau_monument,golf,plage,parc_animalier_theme,dataSpas
-TYPE_1=dbpedia-owl\:abstract,string,Hotel,chateau_monument,golf,plage,parc_animalier_theme,dataDavy,dataSpas,dataHebergement
+TYPE_2=dbpedia-owl\:abstract,string,Hotel,chateau_monument,golf,plage,parc_animalier_theme,dataDavy,dataSpas,dataHebergement
 PRESTA_3=pdll\:hasTasting,string,chateau_monument,golf,plage,parc_animalier_theme,dataSpas
+TYPE_1=dbpedia-owl\:abstract,string,Hotel,chateau_monument,golf,plage,parc_animalier_theme,dataDavy,dataSpas,dataHebergement
 PRESTA_2=pdll\:hasFamilyWelcome,string,chateau_monument,golf,plage,parc_animalier_theme,dataSpas
 PRESTA_1=pdll\:hasRVArea,string,chateau_monument,golf,plage,parc_animalier_theme,dataSpas
 CODE_POSTAL=sc\:postalCode,string,service_public,sport_loisir,mobilite,parking,action_sociale,vie_sociale,enseignement,culte,equipement_culture,decheteries,vie_pratique,justice_securite,dataAdeline3,dataVieSociale,dataActionSociale,dataEnseignementNantes
 HORAIRES=sc\:openingHours,string,lieux_d_art
 HANDIPLAGE=pdll\:isHandiplageLabelled,string,chateau_monument,golf,plage,parc_animalier_theme,dataSpas
 ANIMX=pdll\:animalAllowed,string,Hotel,dataDavy,dataHebergement
-GUIDE_1_CLAS=pdll\:guideGaultMillauScore,string,restaurant
 WEB=dbpprop\:website,string,service_public,sport_loisir,mobilite,action_sociale,vie_sociale,enseignement,culte,equipement_culture,decheteries,vie_pratique,justice_securite,dataAdeline3,dataVieSociale,dataActionSociale,dataEnseignementNantes
+GUIDE_1_CLAS=pdll\:guideGaultMillauScore,string,restaurant
 $$prefixes$$=dcterms\: <http\://purl.org/dc/terms/>,\: <\#>,void\: <http\://rdfs.org/ns/void\#>,TEMPORAIRE\: <http\://temporaire.org/>,gr\: <http\://purl.org/goodrelations/>,pdll\: <http\://lodpaddle.univ-nantes.fr/>,dbpedia\: <http\://dbpedia.org/resource/>,prop-fr\: <http\://fr.dbpedia.org/property/>,foaf\: <http\://xmlns.com/foaf/0.1/>,ex\: <http\://example.org/>,owl\: <http\://www.w3.org/2002/07/owl\#>,rdfs\: <http\://www.w3.org/2000/01/rdf-schema\#>,rdf\: <http\://www.w3.org/1999/02/22-rdf-syntax-ns\#>,xsd\: <http\://www.w3.org/2001/XMLSchema\#>,dbpprop\: <http\://dbpedia.org/property/>,dbpedia-owl\: <http\://dbpedia.org/ontology/>,sc\: <http\://schema.org/>,geo\: <http\://www.w3.org/2003/01/geo/wgs84_pos\#>
 LANGUE_4=dbpedia-owl\:language,string,Hotel,dataDavy,dataHebergement
 LANGUE_3=dbpedia-owl\:language,string,Hotel,dataDavy,dataHebergement
 LANGUE_2=dbpedia-owl\:language,string,Hotel,dataDavy,dataHebergement
 LANGUE_1=dbpedia-owl\:language,string,Hotel,dataDavy,dataHebergement
-PROT=pdll\:protection,string,patrimoine
 CLAS_LOGIS=pdll\:logisScore,string,Hotel,dataDavy,dataHebergement
+PROT=pdll\:protection,string,patrimoine
 LABELLISEE=pdll\:hasLabel,string,Petites_cit\u00E9s_de_caractere,Petites_cites_de_caractere
 Jauge=dbpprop\:seatingCapacity,string,salle_spectacle
 CONDITIONS_D_ACCES=sc\:price,string,parking
 MANIFESTATION=foaf\:name,string,manifestations_sportives
-DATE_FIN=sc\:endDate,string,manifestations_sportives
 WEB_1=dbpprop\:website,string,Hotel,chateau_monument,golf,plage,restaurant,parc_animalier_theme,dataDavy,dataSpas,dataHebergement
+DATE_FIN=sc\:endDate,string,manifestations_sportives
