--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,11 @@
 			<version>1.3.2</version>
 		</dependency>
 
+	<dependency>
+		<groupId>com.github.ansell.pellet</groupId>
+		<artifactId>pellet-jena</artifactId>
+		<version>2.3.3</version>
+	</dependency>
 
 	</dependencies>
 </project>
