--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,12 @@
 	<version>1.0.1-SNAPSHOT</version>
 	<name>openDataWrapper</name>
 	<description>Generic wrapper converting data sources from data.paysdelaloire.fr into RDF (N3)</description>
+	<properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+</properties>	
 	<build>
-		<sourceDirectory>src</sourceDirectory>
+		<sourceDirectory>src/main/java</sourceDirectory>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -86,24 +90,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.jena</groupId>
-			<artifactId>jena-arq</artifactId>
-			<version>2.11.0</version>
+			<artifactId>apache-jena-libs</artifactId>
+			<type>pom</type>
+			<version>2.12.0</version>
 		</dependency>
-		<dependency>
-			<groupId>org.apache.jena</groupId>
-			<artifactId>jena-core</artifactId>
-			<version>2.10.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.jena</groupId>
-			<artifactId>jena-iri</artifactId>
-			<version>1.0.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.jena</groupId>
-			<artifactId>jena-tdb</artifactId>
-			<version>1.0.0</version>
-		</dependency>
+		
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
@@ -117,7 +108,7 @@
 		<dependency>
 			<groupId>de.fuberlin.wiwiss.silk</groupId>
 			<artifactId>silk-jena</artifactId>
-			<version>2.5</version>
+			<version>2.5.3</version>
 		</dependency>
 		<dependency>
 			<groupId>de.fuberlin.wiwiss.silk</groupId>
