--- a/src/main/resources/mapping.properties
+++ b/src/main/resources/mapping.properties
@@ -11,7 +11,7 @@ COMMUNE_CODE_INSEE=dbpprop\:insee,integer,patrimoine,Communes_geolocalises,manif
 Acces_Tan=TEMPORAIRE\:Acces_Tan,string,parc_et_jardin
 tarif_mention_payant=TEMPORAIRE\:tarif_mention_payant,string,evenementsCulturel
 DISCIPLINE=dbpedia-owl\:sport,string,manifestations_sportives
-CODE_INSEE=igeo\:codeINSEE,string,festivalPrintemps,evenementsCulturel,festivals_printemps_ete_pays_de_la_loire
+CODE_INSEE=igeo\:codeINSEE,string,evenementsCulturel,festivals_printemps_ete_pays_de_la_loire
 GEO=pdll\:zoneGeo,string,Hotel,chateau_monument,golf,plage,restaurant,parc_animalier_theme,dataDavy,dataSpas,dataHebergement
 CAPACITE_PERS=dbpprop\:seatingCapacity,integer,Hotel,dataDavy,dataHebergement
 Abris=TEMPORAIRE\:Abris,string,parc_et_jardin
@@ -55,7 +55,7 @@ photo_2_credit=TEMPORAIRE\:photo_2_credit,string,evenementsCulturel
 rubrique=dul\:EventType,string,evenementsCulturel
 photo_legende=sc\:caption,string,evenementsCulturel
 departement=igeo\:departement,integer,evenementsCulturel
-TYPE=TEMPORAIRE\:TypeProblem,string,service_public,sport_loisir,mobilite,manifestations_sportives,action_sociale,vie_sociale,enseignement,culte,equipement_culture,vie_pratique,justice_securite,dataAdeline3,dataVieSociale,dataActionSociale,dataEnseignementNantes,dataLieuxCulte,festivalPrintemps,evenementsCulturel,festivals_printemps_ete_pays_de_la_loire
+TYPE=TEMPORAIRE\:TypeProblem,string,service_public,sport_loisir,mobilite,manifestations_sportives,action_sociale,vie_sociale,enseignement,culte,equipement_culture,vie_pratique,justice_securite,dataAdeline3,dataVieSociale,dataActionSociale,dataEnseignementNantes,dataLieuxCulte,evenementsCulturel,festivals_printemps_ete_pays_de_la_loire
 EDIF=pdll\:edifice,string,patrimoine
 DESCRIPTION_DESCRIPTIF_TARIFS=sc\:price,string,restaurant
 Collection_vegetale=TEMPORAIRE\:Collection_vegetale,string,parc_et_jardin
@@ -73,11 +73,11 @@ jour_max=time\:intervalFinishes,string,evenementsCulturel
 COMMUNE_LIBELLE=foaf\:name, string,Communes_geolocalises,Petites_cit\u00E9s_de_caractere,Petites_cites_de_caractere,dataSubventions,dataActionsEducativesLycees,data,dataFondSocialLyceen
 CAPACITE_VOITURE=pdll\:carCapacity,string,parking
 organisme_nom=sc\:Organization,string,evenementsCulturel
-DATES=sc\:openingHours,string,RDV_litteraires,festivalPrintemps,festivals_printemps_ete_pays_de_la_loire
+DATES=sc\:openingHours,string,RDV_litteraires,festivals_printemps_ete_pays_de_la_loire
 genre=sc\:category,string,evenementsCulturel
 ACTION=pdll\:educationalActivity,string,data,dataActionsEducativesLycees
 VISIT_GRO_GUI=pdll\:visitGroupGuide,string,chateau_monument,golf,plage,parc_animalier_theme,dataSpas
-PAGE_FACEBOOK=TEMPORAIRE\:PAGE_FACEBOOK,string,festivalPrintemps,festivals_printemps_ete_pays_de_la_loire
+PAGE_FACEBOOK=TEMPORAIRE\:PAGE_FACEBOOK,string,festivals_printemps_ete_pays_de_la_loire
 CP=sc\:postalCode,integer,cinema,Hotel,bibliotheque_mediatheque,chateau_monument,golf,musique3,salle_spectacle,musique2,musique1,plage,restaurant,college_prive,Librairies,lieux_d_art,parc_animalier_theme,mydata,dataDavy,dataSpas,dataCollegesLA,dataHebergement,lieux_art_contemporain
 VISIT_IND_GUI=pdll\:visitAloneGuide,string,chateau_monument,golf,plage,parc_animalier_theme,dataSpas
 THEME=pdll\:theme,string,sport_loisir,mobilite,action_sociale,vie_sociale,enseignement,culte,equipement_culture,vie_pratique,justice_securite,dataAdeline3,dataVieSociale,dataActionSociale,dataEnseignementNantes,dataActionsEducativesLycees,data,dataLieuxCulte
@@ -104,7 +104,7 @@ Contact=dbpprop\:owner,string,salle_spectacle
 MAIL=sc\:email,string,Librairies,lieux_d_art,lieux_art_contemporain
 IDENT=TEMPORAIRE\:IDENT,string,evenementsCulturel
 VELODYSSEE=pdll\:islabelledVelodyssee,string,Hotel,dataDavy,dataHebergement
-PROGRAMMATION=TEMPORAIRE\:PROGRAMMATION,string,festivalPrintemps,festivals_printemps_ete_pays_de_la_loire
+PROGRAMMATION=TEMPORAIRE\:PROGRAMMATION,string,festivals_printemps_ete_pays_de_la_loire
 MOYEN_PAIEMENT=gr\:acceptedPaymentMethod,string,parking
 titre=foaf\:name,evenementsCulturel
 HIST=dbpedia-owl\:abstract,string,patrimoine
@@ -182,7 +182,7 @@ Surface_hors_batiments=TEMPORAIRE\:Surface_hors_batiments,string,parc_et_jardin
 genre_ident=TEMPORAIRE\:genre_ident,string,evenementsCulturel
 SOUTIEN=pdll\:soutien,string,lieux_d_art,lieux_art_contemporain
 ADRESSE=dbpprop\:location,string,service_public,sport_loisir,mobilite,cinema,parking,action_sociale,vie_sociale,enseignement,jardin_familiaux,culte,equipement_culture,decheteries,vie_pratique,justice_securite,college_prive,Librairies,mydata,dataAdeline3,dataVieSociale,dataActionSociale,dataCollegesLA,dataEnseignementNantes,dataEnvoleo,dataLieuxCulte
-ORGANISATEUR=sc\:performer,string,RDV_litteraires,festivalPrintemps,festivals_printemps_ete_pays_de_la_loire
+ORGANISATEUR=sc\:performer,string,RDV_litteraires,festivals_printemps_ete_pays_de_la_loire
 code_postal=sc\:postalCode,string,evenementsCulturel
 AUTR=prop-fr\:author,string,patrimoine
 Nature=dbpedia-owl\:abstract,string,musique3,musique2,musique1
@@ -246,7 +246,7 @@ DATE_CREATION=TEMPORAIRE\:DATE_CREATION,string,evenementsCulturel
 CLAS_LOGIS=pdll\:logisScore,string,Hotel,dataDavy,dataHebergement
 PROT=pdll\:protection,string,patrimoine
 LABELLISEE=pdll\:hasLabel,string,Petites_cit\u00E9s_de_caractere,Petites_cites_de_caractere
-AUTRES_VILLES=TEMPORAIRE\:AUTRES_VILLES,string,festivalPrintemps,festivals_printemps_ete_pays_de_la_loire
+AUTRES_VILLES=TEMPORAIRE\:AUTRES_VILLES,string,festivals_printemps_ete_pays_de_la_loire
 Jauge=dbpprop\:seatingCapacity,string,salle_spectacle
 tarif_autre=sc\:price,string,evenementsCulturel
 CONDITIONS_D_ACCES=sc\:price,string,parking
